1. Renamed SetIsUpdatable to Updatable, SetIsOrganizer to HasOrganizer. Also SetLikeInfo.java to Likeable. 2. Added liked field In ChatSpaceMemberSelect and implemented HasId interface. 3. Renamed LikeInfo to UserLikeInfo. 4. Created UnifiedMapper and UnifiedMapperImpl to contain StreamMapper, ChatSpaceMapper, StreamAttendeeMapper, ChatSpaceMapper and ToInfoMapper methods. 5. Moved ToIsDeleted from CommonMapper to ToInfoMapper. 6. Removed EmptyRequestToJoinSearchResult.java and updated RequestToJoinSearchResult. Also EmptyShareContactRequestSearchResult.java and updated ShareContactRequestSearchResult. 8. Renamed variables in GoogleCalendarMapper and added Objects::nonNull in stream filter() method. 9. Updated LikeRepository. 10. Updated LikeResponse to replace LikeInfo with user_like_info in JsonProperty. 11. Added new methods in MiscServiceImpl including groupMembershipByEntriesId() and extractAndGetEntriesIds() and updated setEntityUpdatableByUser(), determineIfUserIsTheOrganizerOfEntity(), determineIfUserIsTheOrganizerOfEntity(). 12. Removed unused method in ReviewMapper and ReviewMapperImpl toReviewResponsesPrivate(). 13. Removed StreamAttendeeParticipationRepository.java 14. Break repositories class into other classes including ChatSpaceMemberLookupRepository, ChatSpaceMemberProjectionRepository, ChatSpaceMemberQueryRepository, StreamAttendeeManagementRepository, StreamAttendeeProjectionRepository, UserStreamCountRepository, StreamAttendeeQueryRepository, StreamManagementRepository, StreamQueryRepository, UserStreamQueryRepository. 15. Created other services for centralization and grouping of related repositories into one common service including ChatSpaceMemberOperationsService, ChatSpaceMemberOperationsServiceImpl, ChatSpaceOperationsService, ChatSpaceOperationsServiceImpl, EventOperationsService, EventOperationsServiceImpl, StreamAttendeeOperationsService, StreamAttendeeOperationsServiceImpl, StreamOperationsService, StreamOperationsServiceImpl 16. Created 